--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +48,8 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "installConfig": {
+    "legacy-peer-deps": true
   }
 }
