--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "homepage": ".",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "async-validator": "^1.11.5",
     "babel-runtime": "^6.26.0",
     "element-plus": "^2.9.8",
@@ -27,7 +32,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "vercel-build": "npm install --legacy-peer-deps && npm run build"
+    "vercel-build": "npm ci --legacy-peer-deps && NODE_OPTIONS='--openssl-legacy-provider' npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +56,8 @@
   },
   "installConfig": {
     "legacy-peer-deps": true
+  },
+  "resolutions": {
+    "ajv": "6.12.6"
   }
 }
