--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": ".",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -26,13 +26,13 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "vercel-build": "npm ci --legacy-peer-deps && NODE_OPTIONS='--openssl-legacy-provider' npm run build"
+    "vercel-build": "npm ci --legacy-peer-deps && npm run build"
   },
   "eslintConfig": {
     "extends": [
